--- a/DepartmentManagement/DepartmentManagement.csproj
+++ b/DepartmentManagement/DepartmentManagement.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\employee\" />
+  </ItemGroup>
+
 </Project>
