--- a/DepartmentManagement/DepartmentManagement.csproj
+++ b/DepartmentManagement/DepartmentManagement.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>5a9df471-bee5-4dd0-a367-3e66080fb946</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
